--- a/resume.html
+++ b/resume.html
@@ -396,7 +396,7 @@
             <h2>Досвід роботи</h2>
 
             <div class="job-block">
-                <div class="job-company">Збройні Сили України, 60 окрема механізована Інгулецька бригада</div>
+                <div class="job-company">Збройні Сили України</div>
                 <div class="job-dates">01.03.2022 – 10.11.2025</div>
 
                 <div class="job-title">Обіймані посади:</div>
