Update award list in resume.html

--- a/resume.html
+++ b/resume.html
@@ -420,7 +420,7 @@
 
                 <div class="job-title" style="color: var(--primary-color);">Нагороди:</div>
                 <ul>
-                    <li>Медаль «ХРЕСТ 60 омбр»</li>
+                    <li>Медаль «ХРЕСТ»</li>
                     <li>Відзнака Міністра оборони України «ХРЕСТ ПОШАНИ»</li>
                     <li>Відзнака Міністра оборони України «ЗА ЗРАЗКОВУ СЛУЖБУ»</li>
                     <li>Медаль «ЗА ВІЙСЬКОВУ СЛУЖБУ УКРАЇНІ» (державна нагорода)</li>
