--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Резюме Волок Сергій</title>
+  <title>Військовий юрист - Волок Сергій</title>
   <style>
     html, body {
       height: 100%;
