--- a/resume.html
+++ b/resume.html
@@ -372,7 +372,9 @@
             <div class="contacts-footer">
                 <div>📞 <a href="tel:+380999479747" style="font-weight: bold; color: var(--text-white);">+38 (099) 947-97-47</a></div>
                 <div>📍 м. Дніпро</div>
-                <div style="font-size: 0.9rem; color: var(--text-gray); margin-top: 10px;">Працюю по всій Україні (онлайн)</div>
+                <div style="font-size: 0.9rem; color: var(--text-gray); margin-top: 10px;">Працюю по всій Україні </div>
+                 <div style="font-size: 0.9rem; color: var(--text-gray); margin-top: 10px;">офіс - м.Дніпро вул Королеви Єлизавети ІІ буд.7 офіс 1104 (БЦ Призма - орієнтир магазин "Touch")</div>
+
             </div>
             <div class="social-links">
                 <a href="#" class="social-btn">Telegram</a>
