Update description in hero section of resume

--- a/resume.html
+++ b/resume.html
@@ -266,7 +266,7 @@
         <section class="hero">
             <div class="container">
                 <h1>Військовий Юрист</h1>
-                <p>Правовий захист військовослужбовців у зоні бойових дій та в тилу. <br>Власний бойовий та штабний досвід у ЗСУ.</p>
+                <p>Правовий захист військовослужбовців. <br>Власний досвід військової служби в ЗСУ.</p>
                 <button id="openModalBtn" class="main-cta">Отримати консультацію</button>
             </div>
         </section>
