--- a/resume.html
+++ b/resume.html
@@ -277,7 +277,7 @@
                 <div class="services-grid">
                     <article class="service-card">
                         <h3>💰 Виплати та компенсації</h3>
-                        <p>Допомога в отриманні виплат за поранення, звільнення, втрату працездатності.</p>
+                        <p>Допомога в отриманні виплат за поранення, звільнення, втрату працездатності,а також <strong>грошового забезпечення та додаткової винагороди</strong>.</p>
                     </article>
                     <article class="service-card">
                         <h3>🎖 Отримання УБД</h3>
