Update military experience description in resume

--- a/resume.html
+++ b/resume.html
@@ -314,7 +314,7 @@
                     <p>
                         "Я розумію проблеми військових не з книжок, а з власного досвіду. Пройшов шлях від командира відділення до офіцера штабу. 
                         Знаю систему зсередини: як пишуться рапорти, як працює стройова частина, і чому документи "губляться". 
-                        Моя мета — використати юридичну освіту та бойовий досвід для вашого захисту."
+                        Моя мета — використати юридичну освіту та досвід війскової служби для вашого захисту."
                     </p>
                 </div>
 
@@ -332,7 +332,7 @@
                                     <li>Штабна робота: документообіг, аналітика, звітність.</li>
                                     <li>Командування підрозділами у бойових та кризових умовах.</li>
                                     <li>Організація правового та технічного забезпечення.</li>
-                                    <li>Служба на посадах: від командира відділення до начальника майстерні БАК.</li>
+                                    <li>Служба на посадах: від командира відділення до офіцера штабу.</li>
                                 </ul>
                             </div>
                         </div>
