Revise contact details in resume.html
Updated contact information and location details.

--- a/resume.html
+++ b/resume.html
@@ -488,8 +488,8 @@
             <h2 class="section-title">Контакти</h2>
             <div class="contacts-footer">
                 <div>📞 <a href="tel:+380999479747" style="font-weight: bold; color: var(--text-white);">+38 (099) 947-97-47</a></div>
-                <div>📍 м. Дніпро</div>
-                <div style="font-size: 0.9rem; color: var(--text-gray); margin-top: 10px;">Працюю по всій Україні (онлайн)</div>
+                <div>📍 м. Дніпро вул.Королеви Єлизавети ІІ,буд. 7 офіс 1104 (БЦ ПРИЗМА)</div>
+                <div style="font-size: 0.9rem; color: var(--text-gray); margin-top: 10px;">Працюю по всій Україні </div>
             </div>
             <div class="social-links">
                 <a href="#" class="social-btn">Telegram</a>
